Revert "Fix Safari transform rotate bug (Add z-index 0 to all elements)"
This reverts commit cf739789078c47ff7cbfd8e272a87b5d2c3f9080.

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,6 @@
   margin-block-end: 0;
   position: relative;
   box-sizing: border-box;
-  z-index: 0;
 }
 
 html,
